--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Hello Mahal!</h1>
                 <p> 
                     <span>
-                        &emsp;Hi babyy koo, Happy 2nd Monthsary!!!!!!, This is a Simple message lang para sa girfriend kong napaka gandaa, grabe baby ambilis ng panahon right? 2nd monthsary na natin, alam mo    love i'm so grateful having someone like you in my life, im so thankful and really happy knowing that i have the best Girlfriend ever, i promise you mahal na i would never leave you in my life  dahil ikaw lang ang gusto kong makasama hanggang sa pagtanda natin.
+                        &emsp;Hi babyy koo, Happy 2nd Monthsary!!!!!!, This is a Simple message lang para sa girfriend kong napaka gandaa, grabe baby ambilis ng panahon right? 2nd monthsary na natin, alam mo baby, i'm so grateful having someone like you in my life, im so very thankful and really happy knowing that i have the best Girlfriend ever, i promise you mahal na i would never leave you in my life  dahil ikaw lang ang gusto kong makasama hanggang sa pagtanda natin.
                     </span>
                     <br> <br>
                     <span>
-                        &emsp; BABYYYYYYY, mahal na mahal kita palagi, thank you for being there always, sa tuwing napapagod ako nandyan ka palagi para pasiyahin ako at tanggalin ang pagod ko, thank you for your love and care mahal ko. Remember baby i will never get tired of loving and understanding you okayy?, madami pa tayong pagdadaan in the future and i believe na makakayanan natin at malalagpasan natin yun ng magkasama, i love you so much napaka pretty, gandaaa, gorgeous kong babyyy. Sadly hindi tayo magkikita ngayon so i decided na gawin nalang tong website nato para sayo hihih I lovee youuu so muchh mahal!! mwa mwa mwa mwa mwa.
+                        &emsp; BABYYYYYYY, mahal na mahal kita palagi, thank you for being there always, sa tuwing napapagod ako nandyan ka palagi para pasiyahin ako, nawawala talaga pagod ko sa tuwing nandyan ka mahal kaya thank you veryyy muchh for your love and care mahal ko. Remember baby i will never get tired of loving and understanding you okayy?, madami pa tayong pagdadaan in the future and i believe na makakayanan natin at malalagpasan natin yun ng magkasama, i love you so much napaka pretty, gandaaa, gorgeous kong babyyy. Sadly hindi tayo magkikita ngayon so i decided na gawin nalang tong website nato para sayo hihih I lovee youuu so muchh mahal!! mwa mwa mwa mwa mwa.
                     </span>      
                 </p>
                 <br>
